# runtime-node-api

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  deno.json  index.js  inline_functions.js  mod.ts  package-lock.json  package.json  roadmap.md
.github/workflows/: ci.yml
NativeScript for macOS.app/Contents/: Info.plist  NativeScript.icns
bench/: main.js  package.json  test.js
core-test/: .gitignore  deno.json  package.json  spack.config.js  transform_core.js
core-test/src/: compat.js  index.js
examples/: appkit.js  class.js  deno_ffi.js  foundation.js  gamecontroller.js  main.js  memory_management.js  menubar.js  metal.js  metal_compute.js  metal_graphics.js  mlc.js  mlcompute.js  package.json  pasteboard.js  patch_method.js  split_view.js  spritekit.js  test.js  test.m  url_session.js  urlsession.js  view_controller.js  webgpu.ts  webview.js
examples/ball/: AppController.js  AppDelegate.js  Ball.js  BallViewController.js  BallWindowController.js  DockUtils.js  MomentumValue.js  Motion.js  MouseCatcherView.js  README.md  main.js
include/: Block.h  Bridge.h  CFunction.h  Cif.h  Class.h  ClassBuilder.h  ClassMember.h  Closure.h  InlineFunctions.h  Interop.h  JSObject.h  MethodCif.h  NativeCall.h  ObjCBridge.h  ObjCBridgeData.h  Object.h  Protocol.h  Struct.h  TypeConv.h  Variable.h  autoreleasepool.h  block.h  bridge.h  bridged_class.h  bridged_method.h  class.h  closure.h  enum.h  js_native_api.h  js_native_api_types.h  method_cif.h  native_call.h  node_api.h  node_api_types.h  node_api_util.h  objc_bridge_data.h  object_ref.h  struct.h  type_conv.h  util.h
lib/: classes.js  inline_functions.d.ts  inline_functions.js  native.js  types.d.ts
libffi/: Makefile  generate-darwin-source-and-headers.py  makefile.sed~
libffi/aarch64-apple-darwin/: Makefile  config.status  fficonfig.h  libffi.la  libffi.pc  libffi_convenience.la  libtool  local.exp
libffi/aarch64-apple-darwin/.libs/: libffi.lai
libffi/aarch64-apple-darwin/doc/: Makefile
metadata/: .gitignore  CMakeLists.txt  bench.js  deno.json  deps.ts  enum.ts  main.ts  metadata.ios.arm64.nsmd  metadata.ios.nsmd  metadata.ios.x86_64.nsmd  metadata.macos.arm64.nsmd  metadata.macos.nsmd  metadata.macos.x86_64.nsmd  metadata.nsmd
metadata/include/: IR.h  Metadata.h  MetadataReader.h  MetadataWriter.h  TSEmitter.h  Util.h
metadata/src/: Metadata.h  main.cpp
metadata/src/IR/: Category.cpp  Class.cpp  Enum.cpp  Factory.cpp  Function.cpp  Member.cpp  Protocol.cpp  Record.cpp  TypeSpec.cpp  Variable.cpp
metadata/src/MetadataWriter/: Class.cpp  Enum.cpp  Function.cpp  Member.cpp  Protocol.cpp  Record.cpp  TypeSpec.cpp  Variable.cpp  Writer.cpp
metadata/src/TSEmitter/: Class.cpp  Emitter.cpp  Enum.cpp  Function.cpp  Member.cpp  Protocol.cpp  Record.cpp  TypeSpec.cpp  Variable.cpp
runtime/: CMakeLists.txt  deno.json  mod.js  test  test.hbc  test.js
runtime/Frameworks/hermes.framework/Versions/0/Resources/: Info.plist
runtime/TestApp/: .gitignore  .swcrc  package.json  spack.config.js
runtime/TestApp/scripts/: bundler.ts
runtime/TestApp/src/: main.js
runtime/include/: App.h  Bundle.h  Compiler.h  Console.h  NapiUtil.h  Performance.h  Require.h  Runtime.h  Timers.h  js_native_api_util.h  segappend.h
runtime/include/hermes/: TracingRuntime.h  hermes.h
runtime/napi/common/: jsr_common.h  napi.h  native_api_util.h
runtime/napi/hermes/: js_native_api.h  js_native_api_types.h  jsr.cpp  jsr.h
runtime/napi/hermes/hermes/: MurmurHash.h  hermes_win.h
runtime/napi/hermes/hermes/Public/: HermesExport.h
runtime/napi/v8/: js_native_api.h  js_native_api_types.h  jsr.cpp  jsr.h  v8-api-internals.h  v8-api.cpp  v8-api.h
runtime/napi/v8/v8_inspector/: ns-v8-tracing-agent-impl.cpp
runtime/src/: App.mm  Bundle.mm  Compiler.cpp  Console.cpp  Performance.cpp  Require.cpp  Require.mm  Runtime.cpp  Timers.mm  main.cpp  segappend.cpp
scripts/: build.ts  build_libffi.ts  build_runtime.ts  bundler.ts  deps.ts  metagen.ts  write_metadata.ts
src/: AutoreleasePool.mm  Block.mm  CFunction.mm  Cif.mm  Class.mm  ClassBuilder.mm  ClassMember.mm  Closure.mm  CustomClass.mm  Enum.mm  InlineFunctions.mm  Interop.mm  JSObject.mm  MethodCif.mm  NativeCall.mm  ObjCBridge.mm  ObjCBridgeData.mm  Object.mm  ObjectRef.mm  Protocol.mm  Struct.mm  TypeConv.mm  Util.mm  Variable.mm  autoreleasepool.mm  block.mm  bridge.cc  bridge.mm  bridged_class.cc  bridged_class.mm  bridged_method.cc  bridged_method.mm  class.cc  class.mm  closure.cc  closure.mm  enum.mm  js_object.mm  method_cif.cc  method_cif.mm  (+11 more)
test/: appkit.js  bundler.ts  deno_ffi.mjs  foundation.js  main.js  main.mjs  split_view.js  splitview.js  spritekit.js  test.dylib  view_controller.js
types/ios/: AVFAudio.d.ts  AVFoundation.d.ts  AddressBook.d.ts  AudioToolbox.d.ts  CloudKit.d.ts  Contacts.d.ts  CoreAudioTypes.d.ts  CoreBluetooth.d.ts  CoreData.d.ts  CoreFoundation.d.ts  CoreGraphics.d.ts  CoreHaptics.d.ts  CoreImage.d.ts  CoreLocation.d.ts  CoreMIDI.d.ts  CoreML.d.ts  CoreMedia.d.ts  CoreMotion.d.ts  CoreServices.d.ts  CoreSpotlight.d.ts  CoreText.d.ts  CoreVideo.d.ts  EventKit.d.ts  Foundation.d.ts  GLKit.d.ts  GameController.d.ts  GameKit.d.ts  GameplayKit.d.ts  ImageIO.d.ts  Intents.d.ts  JavaScriptCore.d.ts  MLCompute.d.ts  MapKit.d.ts  MediaToolbox.d.ts  Metal.d.ts  MetalKit.d.ts  MetalPerformanceShaders.d.ts  ModelIO.d.ts  NaturalLanguage.d.ts  OpenGLES.d.ts  (+11 more)
types/macos/: AVFAudio.d.ts  AVFoundation.d.ts  AddressBook.d.ts  AppKit.d.ts  AudioToolbox.d.ts  CloudKit.d.ts  Contacts.d.ts  CoreAudio.d.ts  CoreAudioTypes.d.ts  CoreBluetooth.d.ts  CoreData.d.ts  CoreFoundation.d.ts  CoreGraphics.d.ts  CoreHaptics.d.ts  CoreImage.d.ts  CoreLocation.d.ts  CoreMIDI.d.ts  CoreML.d.ts  CoreMedia.d.ts  CoreMotion.d.ts  CoreServices.d.ts  CoreSpotlight.d.ts  CoreText.d.ts  CoreVideo.d.ts  EventKit.d.ts  Foundation.d.ts  GLKit.d.ts  GameController.d.ts  GameKit.d.ts  GameplayKit.d.ts  Intents.d.ts  JavaScriptCore.d.ts  MLCompute.d.ts  MapKit.d.ts  Metal.d.ts  MetalKit.d.ts  MetalPerformanceShaders.d.ts  ModelIO.d.ts  QuartzCore.d.ts  Runtime.d.ts  (+8 more)
(+23 files in other folders)
